--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   get: ^4.6.5
   google_fonts: ^4.0.3
   http: ^0.13.5
+  just_audio: ^0.9.32
+  lottie: ^2.3.1
   provider: ^6.0.5
   video_player: ^2.6.0
 
@@ -54,8 +56,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - lib/animations/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
