--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   just_audio: ^0.9.32
   lottie: ^2.3.1
   provider: ^6.0.5
+  rive: ^0.10.3
   video_player: ^2.6.0
 
 dev_dependencies:
@@ -58,6 +59,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/animations/
+    - assets/rive/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
