--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.5
+  glassmorphism: ^3.0.0
   google_fonts: ^4.0.3
   http: ^0.13.5
   just_audio: ^0.9.32
